--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    margin: 0 auto;
 }
 
 
@@ -17,6 +17,7 @@ header {
 h1 {
     color: #901C1C;
     margin-right: 100px;
+    font-weight: normal;
 }
 
 .logo {
@@ -40,10 +41,15 @@ h1 {
     text-align: center;    
 }
 
+.photographer_section article a {
+    text-decoration: none;
+}
+
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
-      margin: 10px 0 5px;
+    margin: 10px 0 5px;
+    font-weight: normal;
 }
 
 .photographer_section article img {
@@ -56,7 +62,7 @@ h1 {
 /* ➤ Nouveau style pour la localisation */
 .photographer-location {
   color: #901C1C; 
-  font-size: 18px;
+  font-size: 13px;
   margin: 0;
 }
 
